--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,29 +13,33 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
         android:ems="10"
-        android:layout_marginTop="96dp"
-        android:id="@+id/editText"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/password"
+        android:hint="@string/password_prompt"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/email" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         android:ems="10"
-        android:layout_below="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_marginTop="89dp"
-        android:id="@+id/editText2" />
+        android:id="@+id/email"
+        android:hint="@string/email_prompt"
+        android:layout_marginBottom="55dp"
+        android:layout_alignBottom="@+id/password"
+        android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:text="TextView"
+    <Button
+        android:text="@string/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp"
-        android:id="@+id/textView" />
+        android:layout_marginTop="22dp"
+        android:id="@+id/loginBtn"
+        android:onClick="login"
+        android:layout_below="@+id/password"
+        android:layout_alignStart="@+id/password"
+        android:layout_alignEnd="@+id/password" />
+
 </RelativeLayout>
