--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:id="@+id/loginBtn"
-        android:onClick="login (LoginActivity)"
+        android:onClick="login"
         android:layout_below="@+id/password"
         android:layout_alignStart="@+id/password"
         android:layout_alignEnd="@+id/password" />
