--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -14,6 +14,8 @@
         android:text="ToggleButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textOff="Begin Route"
+        android:textOn="Stop Route"
         android:id="@+id/toggleButton"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="13dp"
