--- a/app/src/main/res/layout/deal_item.xml
+++ b/app/src/main/res/layout/deal_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/deal_item"
     android:layout_width="fill_parent"
@@ -8,24 +9,47 @@
     tools:context="models.DealItem">
 
     <TextView
-        android:text="Nike"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/dealName"
-        android:layout_alignParentEnd="true"
-        android:textSize="24sp"
-        android:textStyle="normal|bold" />
-
-    <TextView
         android:text="Save 40% off all Nike Products"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dealName"
-        android:layout_alignParentStart="true"
         android:layout_marginTop="13dp"
         android:id="@+id/dealDescr"
-        android:layout_alignParentEnd="true"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_below="@+id/dealName"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="fill_parent"
+        app:srcCompat="@drawable/bb_bottom_bar_top_shadow"
+        android:id="@+id/dealImage"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_height="140dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Nike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dealName"
+        android:textSize="24sp"
+        android:textStyle="normal|bold"
+        android:layout_marginTop="24dp"
+        android:layout_below="@+id/dealImage"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:id="@+id/dealPoints"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"
+        android:layout_above="@+id/dealDescr"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="33dp" />
 </RelativeLayout>
