--- a/app/src/main/res/layout/deal_item.xml
+++ b/app/src/main/res/layout/deal_item.xml
@@ -8,26 +8,14 @@
     android:padding="16dp"
     tools:context="models.DealItem">
 
-    <TextView
-        android:text="Save 40% off all Nike Products"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:id="@+id/dealDescr"
-        android:textSize="18sp"
-        android:layout_below="@+id/dealName"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-
     <ImageView
         android:layout_width="fill_parent"
         app:srcCompat="@drawable/bb_bottom_bar_top_shadow"
         android:id="@+id/dealImage"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:layout_height="140dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_height="250dp" />
 
     <TextView
         android:text="Nike"
@@ -44,12 +32,22 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="17dp"
         android:id="@+id/dealPoints"
         android:padding="10dp"
         android:textColor="@color/white"
         android:background="@color/colorPrimary"
+        android:layout_marginBottom="33dp"
         android:layout_above="@+id/dealDescr"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Save 40% off all Nike Products"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dealDescr"
+        android:textSize="18sp"
+        android:layout_below="@+id/dealName"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="33dp" />
+        android:layout_marginTop="11dp" />
 </RelativeLayout>
